<resources>
    <string name="app_name">Demo</string>
    <string name="lesson1_3">Lesson1_3 TextView EditView</string>
    <string name="call_word">请输入您的姓名</string>
    <string name="name_mark">姓名：</string>
    <string name="lesson1_8">Lesson1_8 AutoCompleteTextView</string>
    <string name="hint_lesson1_8">请输入您要搜索的内容</string>
    <string name="lesson1_8_2">Lesson1_8_2 MultiAutoCompleteTextView</string>
    <string name="sendto">请输入收件人的邮箱</string>
    <string name="lesson1_9">Lesson1_9_ToggleButton</string>
    <string name="off">关</string>
    <string name="on">开</string>
    <string name="lesson1_10">Lesson1_10_CheckBox</string>
    <string name="lesson1_11">Lesson1_11_RadioGroup_RadioButton</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="sex">性别:</string>
    <string name="like">爱好:</string>
    <string name="pingpang">PingPang</string>
    <string name="football">football</string>
    <string name="basketball">basketball</string>
    <string name="lesson1_18">Lesson1_18_Intent</string>
    <string name="text">可接受目标页面返回内容的跳转方式</string>
    <string name="textshow">用来显示接收到的目标页面返回的内容</string>
    <string name="returndatatext">点击后向前一个页面返回数据</string>
</resources>
